--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,10 @@ background-color: #bdb2ff;
     left: 0;
     min-height: 300px;
 }
+
+#carouselbuttons {
+    right: 0;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
