--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ background-color: #bdb2ff;
     min-height: 300px;
 }
 
-#carouselbuttons {
+#carouselButton {
     right: 0;
     position: absolute;
     bottom: 0px;
